--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "esbuild src/index.ts --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
     "start": "node dist/index.js"
   },
   "dependencies": {
@@ -11,7 +11,9 @@
     "hono": "^4.9.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "@types/node": "^20.11.17",
+    "esbuild": "^0.25.10",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
