--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "container-security-demo",
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "esbuild src/index.ts --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
-    "start": "node dist/index.js"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.19.4",
-    "hono": "^4.9.8"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "@types/node": "^20.11.17",
-    "esbuild": "^0.25.10",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
-  }
+	"name": "container-security-demo",
+	"type": "module",
+	"scripts": {
+		"dev": "tsx watch src/index.ts",
+		"build": "esbuild src/index.ts --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
+		"check": "biome check",
+		"start": "node dist/index.js",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@hono/node-server": "^1.19.4",
+		"hono": "^4.9.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.4",
+		"@types/node": "^20.11.17",
+		"esbuild": "^0.25.10",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.2.0",
+		"tsx": "^4.7.1",
+		"typescript": "^5.8.3"
+	},
+	"lint-staged": {
+		"*": [
+			"pnpm check --write --no-errors-on-unmatched"
+		]
+	}
 }
