--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
 		"typescript": "^5.8.3"
 	},
 	"lint-staged": {
-		"*": [
-			"pnpm check --write --no-errors-on-unmatched"
-		]
+		"*": "pnpm check --write --no-errors-on-unmatched"
 	}
 }
