--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
 		"typescript": "^5.8.3"
 	},
 	"lint-staged": {
-		"*": "pnpm check --write --no-errors-on-unmatched"
+		"*": "pnpm run check"
 	}
 }
