--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"typescript": "^5.8.3"
 	},
 	"lint-staged": {
-		"*": "pnpm run check"
+		"*": [
+			"pnpm run check --write --no-errors-on-unmatched"
+		]
 	}
 }
