--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "esbuild src/index.ts --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
 		"check": "biome check",
 		"start": "node dist/index.js",
-		"prepare": "husky"
+		"prepare": "husky",
+		"test": "vitest --run"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.4",
@@ -15,9 +16,11 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
 		"@types/node": "^20.11.17",
+		"@vitest/coverage-v8": "^3.2.4",
 		"esbuild": "^0.25.10",
 		"husky": "^9.1.7",
 		"tsx": "^4.7.1",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"vitest": "^3.2.4"
 	}
 }
