--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,46 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/user/application_security/secret_detection/pipeline/configure
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
-:stages:
-- test
-:sast:
-  :stage: test
-:include:
-- :template: Security/SAST.gitlab-ci.yml
-stages:
-- test
-- secret-detection
+# Security templates kept and aligned to stages above
+include:
+- template: Security/SAST.gitlab-ci.yml
+- template: Security/Secret-Detection.gitlab-ci.yml
+
 variables:
   SECRET_DETECTION_ENABLED: 'true'
-secret_detection:
-  stage: secret-detection
-include:
-- template: Security/Secret-Detection.gitlab-ci.yml
+
+.pnpm:
+  image: node:lts-alpine
+  variables:
+    PNPM_STORE_DIR: .pnpm-store
+  cache:
+    key:
+      files:
+      - pnpm-lock.yaml
+    paths:
+    - .pnpm-store/
+    policy: pull-push
+  before_script:
+  - corepack enable pnpm
+  - pnpm --version
+  - pnpm config set store-dir "$PNPM_STORE_DIR"
+  - pnpm install --frozen-lockfile
+
+build:
+  extends: .pnpm
+  stage: build
+  script:
+  - pnpm check
+  - pnpm build
+
+test:
+  extends: .pnpm
+  stage: test
+  script:
+  - pnpm test run --coverage
+  artifacts:
+    paths:
+    - dist/
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage/cobertura-coverage.xml
+      junit: junit.xml
+  coverage: /All files\s*\|\s*([\d\.]*)/
