--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "container-security-demo",
 	"type": "module",
+	"packageManager": "pnpm@10.16.1",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
 		"build": "esbuild src/index.ts --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
 		"check": "biome check",
 		"start": "node dist/index.js",
 		"prepare": "husky",
-		"test": "vitest --run"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.4",
