--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!**/.pnpm-store", "!coverage", "!reports"]
+		"includes": ["**", "!**/.pnpm-store", "!coverage", "!reports", "!dist"]
 	},
 	"formatter": {
 		"enabled": true,
