--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"type": "module",
 	"packageManager": "pnpm@10.16.1",
 	"scripts": {
-		"dev": "tsx watch src/index.ts",
-		"build": "esbuild src/index.ts --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
+		"dev": "tsx watch src/index.tsx",
+		"build": "esbuild src/index.tsx --platform=node --format=esm --bundle --minify --sourcemap --outdir=dist",
 		"check": "biome check",
 		"start": "node dist/index.js",
 		"prepare": "husky",
