--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "node dist/index.js",
 		"prepare": "husky",
 		"test": "vitest",
+		"cf-dev": "wrangler dev",
 		"deploy": "wrangler deploy --minify",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
