--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -67,9 +67,10 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: docker/scout-action@v1
         with:
-          command: compare
+          command: quickview,compare
           image: ${{ steps.meta.outputs.tags }}
           to-env: production
           ignore-unchanged: true
           only-severities: critical,high
+          organization: ${{ github.repository_owner }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
