--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ env:
   # Hostname of your registry
   REGISTRY: docker.io
   # Image repository, without hostname and tag
-  IMAGE_NAME: mnsec-demo
+  IMAGE_NAME: khasbilegt/mnsec-demo
   SHA: ${{ github.event.pull_request.head.sha || github.event.after }}
 
 jobs:
