disable scout compare

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -67,7 +67,7 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: docker/scout-action@v1
         with:
-          command: quickview,compare
+          command: quickview
           image: ${{ steps.meta.outputs.tags }}
           to-env: production
           ignore-unchanged: true
