--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,7 @@ env:
   REGISTRY: docker.io
   # Image repository, without hostname and tag
   IMAGE_NAME: khasbilegt/mnsec-demo
+  COMPARE_TAG: beta
   SHA: ${{ github.event.pull_request.head.sha || github.event.after }}
 
 jobs:
@@ -63,9 +64,9 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: docker/scout-action@v1
         with:
-          command: quickview
+          command: quickview,compare,recommendations,sbom
           image: ${{ steps.meta.outputs.tags }}
-          to-env: production
+          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.COMPARE_TAG }}
           ignore-unchanged: true
           only-severities: critical,high
           organization: ${{ github.repository_owner }}
