--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,8 @@ env:
   # Hostname of your registry
   REGISTRY: docker.io
   # Image repository, without hostname and tag
-  IMAGE_NAME: mnsec-demo
+  IMAGE_NAME: khasbilegt/mnsec-demo
+  COMPARE_TAG: beta
   SHA: ${{ github.event.pull_request.head.sha || github.event.after }}
 
 jobs:
@@ -41,10 +42,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           labels: |
             org.opencontainers.image.revision=${{ env.SHA }}
-          tags: |
-            type=edge,branch=$repo.default_branch
-            type=semver,pattern=v{{version}}
-            type=sha,prefix=,suffix=,format=short
 
       # Build and push Docker image with Buildx
       # (don't push on PR, load instead)
@@ -67,9 +64,9 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: docker/scout-action@v1
         with:
-          command: quickview,compare
+          command: quickview,compare,recommendations,sbom
           image: ${{ steps.meta.outputs.tags }}
-          to-env: production
+          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.COMPARE_TAG }}
           ignore-unchanged: true
           only-severities: critical,high
           organization: ${{ github.repository_owner }}
